--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,41 +1,41 @@
 {
+  "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
-  "item.cravings_mod.beer_bottle": "Wort Bottle",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
   "block.cravings_mod.fryer": "Friteuse",
-  "item.cravings_mod.wort_bottle": "Wort Bottle",
+  "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.vodka": "Wine Bottle",
+  "item.cravings_mod.vodka": "Vodka",
   "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.flour_sack": "Sac de farine",
   "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
   "item.cravings_mod.fabric": "Tissu",
-  "item.cravings_mod.grapes": "Grapes",
+  "item.cravings_mod.grapes": "Raisin",
   "item_group.cravings_mod.cravings": "Envies",
   "block.cravings_mod.olive_sapling": "Jeune olivier",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friteuse",
-  "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.potato_mash": "Honey Must Bottle",
-  "item.cravings_mod.wine_bottle": "Grape Juice",
+  "item.cravings_mod.dough": "Pâte",
+  "item.cravings_mod.potato_mash": "Bouteille de purée de pommes de terre",
+  "item.cravings_mod.wine_bottle": "Bouteille de vin",
   "item.cravings_mod.cheese_slice": "Tranche de fromage",
   "block.cravings_mod.cheese_wheel": "Meule de fromage",
-  "item.cravings_mod.fermented_potato_mash": "Bottle of Potato Mash",
+  "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
   "item.cravings_mod.olive": "Olive",
-  "item.cravings_mod.knife": "Knife",
+  "item.cravings_mod.knife": "Couteau",
   "item.cravings_mod.cheese": "Fromage",
-  "item.cravings_mod.grape_seeds": "Grape Seeds",
+  "item.cravings_mod.grape_seeds": "Pépins de raisin",
   "item.cravings_mod.bucket_of_olive_oil": "Seau d\u0027huile d\u0027olive",
-  "block.cravings_mod.lemon_leaves": "Olive Leaves",
-  "block.cravings_mod.lemon_sapling": "Olive Sapling",
-  "item.cravings_mod.grape_juice": "Beer Bottle",
+  "block.cravings_mod.lemon_leaves": "Feuilles de citron",
+  "block.cravings_mod.lemon_sapling": "Jeune citronnier",
+  "item.cravings_mod.grape_juice": "Jus de Raisin",
   "block.cravings_mod.olive_leaves": "Feuilles d\u0027olivier",
-  "item.cravings_mod.lemon": "Olive",
+  "item.cravings_mod.lemon": "Citron",
   "item.cravings_mod.bucket_of_whey": "Seau de lactosérum",
-  "item.cravings_mod.must": "Wort Bottle",
-  "item.cravings_mod.yeast": "Yeast",
+  "item.cravings_mod.must": "Moût de miel",
+  "item.cravings_mod.yeast": "Levure",
   "item.cravings_mod.fried_curds": "Caillé frit",
-  "block.cravings_mod.grape_crop": "Grape Crop",
-  "item.cravings_mod.tool_handle": "Tool Handle",
-  "item.cravings_mod.mead_bottle": "Wine Bottle"
+  "block.cravings_mod.grape_crop": "Récolte de raisin",
+  "item.cravings_mod.tool_handle": "Poignée d\u0027outil",
+  "item.cravings_mod.mead_bottle": "Bouteille d\u0027hydromel"
 }
