--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -1,41 +1,41 @@
 {
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
-  "item.cravings_mod.beer_bottle": "Wort Bottle",
+  "item.cravings_mod.beer_bottle": "Bottiglia di birra",
   "item.cravings_mod.cheese_curds": "Cagliata di formaggio",
   "block.cravings_mod.fryer": "Friggitore",
-  "item.cravings_mod.wort_bottle": "Wort Bottle",
+  "item.cravings_mod.wort_bottle": "Bottiglia di mosto di birra",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farina",
-  "item.cravings_mod.vodka": "Wine Bottle",
+  "item.cravings_mod.vodka": "Vodka",
   "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
   "item.cravings_mod.flour_sack": "Sacco Di Farina",
   "item.cravings_mod.bucket_of_curdy_milk": "Secchio di cagliata",
   "item.cravings_mod.fabric": "Tessuto",
-  "item.cravings_mod.grapes": "Grapes",
+  "item.cravings_mod.grapes": "Uva",
   "item_group.cravings_mod.cravings": "Voglie",
   "block.cravings_mod.olive_sapling": "Alberello d\u0027olivo",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friggitore",
-  "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.potato_mash": "Honey Must Bottle",
-  "item.cravings_mod.wine_bottle": "Grape Juice",
+  "item.cravings_mod.dough": "Impasto",
+  "item.cravings_mod.potato_mash": "Bottiglia Di Pasta Di Patate",
+  "item.cravings_mod.wine_bottle": "Bottiglia di vino",
   "item.cravings_mod.cheese_slice": "Fetta Di Formaggio",
   "block.cravings_mod.cheese_wheel": "Ruota di formaggio",
-  "item.cravings_mod.fermented_potato_mash": "Bottle of Potato Mash",
+  "item.cravings_mod.fermented_potato_mash": "Pasta Di Patate Fermentate",
   "item.cravings_mod.olive": "Oliva",
-  "item.cravings_mod.knife": "Knife",
+  "item.cravings_mod.knife": "Coltello",
   "item.cravings_mod.cheese": "Formaggio",
-  "item.cravings_mod.grape_seeds": "Grape Seeds",
+  "item.cravings_mod.grape_seeds": "Semi d\u0027uva",
   "item.cravings_mod.bucket_of_olive_oil": "Secchio di olio d\u0027oliva",
-  "block.cravings_mod.lemon_leaves": "Olive Leaves",
-  "block.cravings_mod.lemon_sapling": "Olive Sapling",
-  "item.cravings_mod.grape_juice": "Beer Bottle",
+  "block.cravings_mod.lemon_leaves": "Foglie di limone",
+  "block.cravings_mod.lemon_sapling": "Alberello Di Limone",
+  "item.cravings_mod.grape_juice": "Succo d\u0027uva",
   "block.cravings_mod.olive_leaves": "Foglie di olivo",
-  "item.cravings_mod.lemon": "Olive",
+  "item.cravings_mod.lemon": "Limone",
   "item.cravings_mod.bucket_of_whey": "Secchio di siero di latte",
-  "item.cravings_mod.must": "Wort Bottle",
-  "item.cravings_mod.yeast": "Yeast",
+  "item.cravings_mod.must": "Mosto di miele",
+  "item.cravings_mod.yeast": "Lievito",
   "item.cravings_mod.fried_curds": "Cagliata fritta",
-  "block.cravings_mod.grape_crop": "Grape Crop",
-  "item.cravings_mod.tool_handle": "Tool Handle",
-  "item.cravings_mod.mead_bottle": "Wine Bottle"
+  "block.cravings_mod.grape_crop": "Raccolto d\u0027uva",
+  "item.cravings_mod.tool_handle": "Maniglia dello strumento",
+  "item.cravings_mod.mead_bottle": "Bottiglia di idromele"
 }
