25d55a, added grillled cheese & bread slices

--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -1,8 +1,10 @@
 {
+  "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
   "item.cravings_mod.beer_bottle": "Bottiglia di birra",
   "item.cravings_mod.cheese_curds": "Cagliata di formaggio",
   "block.cravings_mod.fryer": "Friggitore",
+  "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Bottiglia di mosto di birra",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farina",
@@ -10,6 +12,7 @@
   "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
   "item.cravings_mod.flour_sack": "Sacco Di Farina",
   "item.cravings_mod.bucket_of_curdy_milk": "Secchio di cagliata",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Tessuto",
   "item.cravings_mod.grapes": "Uva",
   "item_group.cravings_mod.cravings": "Voglie",
@@ -19,6 +22,7 @@
   "item.cravings_mod.potato_mash": "Bottiglia Di Pasta Di Patate",
   "item.cravings_mod.wine_bottle": "Bottiglia di vino",
   "item.cravings_mod.cheese_slice": "Fetta Di Formaggio",
+  "item.cravings_mod.toast": "Bread Slice",
   "block.cravings_mod.cheese_wheel": "Ruota di formaggio",
   "item.cravings_mod.fermented_potato_mash": "Pasta Di Patate Fermentate",
   "item.cravings_mod.olive": "Oliva",
