--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,8 +1,10 @@
 {
+  "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
   "item.cravings_mod.beer_bottle": "Bierflasche",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
   "block.cravings_mod.fryer": "Fritteuse",
+  "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Würzeflasche",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Mehl",
@@ -10,6 +12,7 @@
   "item.cravings_mod.dipped_curds": "Eingeweichter Quark",
   "item.cravings_mod.flour_sack": "Mehlsack",
   "item.cravings_mod.bucket_of_curdy_milk": "Eimer mit Quark",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Stoff",
   "item.cravings_mod.grapes": "Trauben",
   "item_group.cravings_mod.cravings": "Heißhunger",
@@ -19,6 +22,7 @@
   "item.cravings_mod.potato_mash": "Kartoffelpaste",
   "item.cravings_mod.wine_bottle": "Traubensaft",
   "item.cravings_mod.cheese_slice": "Käsescheibe",
+  "item.cravings_mod.toast": "Bread Slice",
   "block.cravings_mod.cheese_wheel": "Käserad",
   "item.cravings_mod.fermented_potato_mash": "Fermentierte Kartoffelpaste",
   "item.cravings_mod.olive": "Olive",
