--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,8 +1,10 @@
 {
+  "item.cravings_mod.grilled_cheese": "Grilled Cheese",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
   "item.cravings_mod.beer_bottle": "Beer Bottle",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
   "block.cravings_mod.fryer": "Fryer",
+  "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Wort Bottle",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Flour",
@@ -10,6 +12,7 @@
   "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.flour_sack": "Flour Sack",
   "item.cravings_mod.bucket_of_curdy_milk": "Bucket of Curdy Milk",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Fabric",
   "item.cravings_mod.grapes": "Grapes",
   "item_group.cravings_mod.cravings": "Cravings",
@@ -19,6 +22,7 @@
   "item.cravings_mod.potato_mash": "Bottle of Potato Mash",
   "item.cravings_mod.wine_bottle": "Wine Bottle",
   "item.cravings_mod.cheese_slice": "Cheese Slice",
+  "item.cravings_mod.toast": "Toast",
   "block.cravings_mod.cheese_wheel": "Cheese Wheel",
   "item.cravings_mod.fermented_potato_mash": "Fermented Potato Mash",
   "item.cravings_mod.olive": "Olive",
