--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,8 +1,10 @@
 {
+  "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
   "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
   "block.cravings_mod.fryer": "Friteuse",
+  "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farine",
@@ -10,6 +12,7 @@
   "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.flour_sack": "Sac de farine",
   "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Tissu",
   "item.cravings_mod.grapes": "Raisin",
   "item_group.cravings_mod.cravings": "Envies",
@@ -19,6 +22,7 @@
   "item.cravings_mod.potato_mash": "Bouteille de purée de pommes de terre",
   "item.cravings_mod.wine_bottle": "Bouteille de vin",
   "item.cravings_mod.cheese_slice": "Tranche de fromage",
+  "item.cravings_mod.toast": "Bread Slice",
   "block.cravings_mod.cheese_wheel": "Meule de fromage",
   "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
   "item.cravings_mod.olive": "Olive",
