25w22a, added lettuce + changing snapshot format to YYwWWn

--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,5 +1,6 @@
 {
   "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
+  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
   "item.cravings_mod.beer_bottle": "Bierflasche",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
@@ -12,7 +13,7 @@
   "item.cravings_mod.dipped_curds": "Eingeweichter Quark",
   "item.cravings_mod.flour_sack": "Mehlsack",
   "item.cravings_mod.bucket_of_curdy_milk": "Eimer mit Quark",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
+  "item.cravings_mod.cheese_sandwich": "Käsesandwich",
   "item.cravings_mod.fabric": "Stoff",
   "item.cravings_mod.grapes": "Trauben",
   "item_group.cravings_mod.cravings": "Heißhunger",
@@ -32,7 +33,9 @@
   "item.cravings_mod.bucket_of_olive_oil": "Eimer Olivenöl",
   "block.cravings_mod.lemon_leaves": "Zitronenblätter",
   "block.cravings_mod.lemon_sapling": "Zitronensetzling",
+  "item.cravings_mod.lettuce": "Grapes",
   "item.cravings_mod.grape_juice": "Traubensaft",
+  "block.cravings_mod.lettuce_crop": "Grape Crop",
   "block.cravings_mod.olive_leaves": "Olivenblätter",
   "item.cravings_mod.lemon": "Zitrone",
   "item.cravings_mod.bucket_of_whey": "Eimer mit Molke",
