25w22b, added tomato item (not crop yet), added BLT + BLT recipe, added bacon & raw bacon. release 0.3.0 coming early june perhaps?

--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,48 +1,52 @@
 {
   "item.cravings_mod.grilled_cheese": "Grilled Cheese",
-  "item.cravings_mod.lettuce_seeds": "Lettuce Seeds",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
   "item.cravings_mod.beer_bottle": "Beer Bottle",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
   "block.cravings_mod.fryer": "Fryer",
   "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Wort Bottle",
-  "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Flour",
-  "item.cravings_mod.vodka": "Vodka Bottle",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.flour_sack": "Flour Sack",
-  "item.cravings_mod.bucket_of_curdy_milk": "Bucket of Curdy Milk",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Fabric",
-  "item.cravings_mod.grapes": "Grapes",
-  "item_group.cravings_mod.cravings": "Cravings",
-  "block.cravings_mod.olive_sapling": "Olive Sapling",
+  "item.cravings_mod.blt": "BLT",
+  "item.cravings_mod.raw_bacon": "Raw Bacon",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fryer",
   "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.potato_mash": "Bottle of Potato Mash",
-  "item.cravings_mod.wine_bottle": "Wine Bottle",
   "item.cravings_mod.cheese_slice": "Cheese Slice",
   "item.cravings_mod.toast": "Toast",
-  "block.cravings_mod.cheese_wheel": "Cheese Wheel",
-  "item.cravings_mod.fermented_potato_mash": "Fermented Potato Mash",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Knife",
-  "item.cravings_mod.cheese": "Cheese",
   "item.cravings_mod.grape_seeds": "Grape Seeds",
   "item.cravings_mod.bucket_of_olive_oil": "Bucket of Olive Oil",
   "block.cravings_mod.lemon_leaves": "Lemon Leaves",
   "block.cravings_mod.lemon_sapling": "Lemon Sapling",
-  "item.cravings_mod.lettuce": "Lettuce",
-  "item.cravings_mod.grape_juice": "Grape Juice",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
-  "block.cravings_mod.olive_leaves": "Olive Leaves",
-  "item.cravings_mod.lemon": "Lemon",
   "item.cravings_mod.bucket_of_whey": "Bucket of Whey",
-  "item.cravings_mod.must": "Honey Must Bottle",
   "item.cravings_mod.yeast": "Yeast",
   "item.cravings_mod.fried_curds": "Fried Curds",
-  "block.cravings_mod.grape_crop": "Grape Crop",
   "item.cravings_mod.tool_handle": "Tool Handle",
+  "item.cravings_mod.lettuce_seeds": "Lettuce Seeds",
+  "item.cravings_mod.ricotta": "Ricotta",
+  "item.cravings_mod.vodka": "Vodka Bottle",
+  "item.cravings_mod.bucket_of_curdy_milk": "Bucket of Curdy Milk",
+  "item.cravings_mod.grapes": "Grapes",
+  "item_group.cravings_mod.cravings": "Cravings",
+  "block.cravings_mod.olive_sapling": "Olive Sapling",
+  "item.cravings_mod.tomato": "Tomato",
+  "item.cravings_mod.potato_mash": "Bottle of Potato Mash",
+  "item.cravings_mod.wine_bottle": "Wine Bottle",
+  "item.cravings_mod.bacon": "Bacon",
+  "block.cravings_mod.cheese_wheel": "Cheese Wheel",
+  "item.cravings_mod.fermented_potato_mash": "Fermented Potato Mash",
+  "item.cravings_mod.cheese": "Cheese",
+  "item.cravings_mod.lettuce": "Lettuce",
+  "item.cravings_mod.grape_juice": "Grape Juice",
+  "block.cravings_mod.olive_leaves": "Olive Leaves",
+  "item.cravings_mod.lemon": "Lemon",
+  "item.cravings_mod.must": "Honey Must Bottle",
+  "block.cravings_mod.grape_crop": "Grape Crop",
   "item.cravings_mod.mead_bottle": "Mead Bottle"
 }
