--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,48 +1,52 @@
 {
   "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
-  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
-  "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
+  "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
   "block.cravings_mod.fryer": "Friteuse",
   "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
-  "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.vodka": "Vodka",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.flour_sack": "Sac de farine",
-  "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Tissu",
-  "item.cravings_mod.grapes": "Raisin",
-  "item_group.cravings_mod.cravings": "Envies",
-  "block.cravings_mod.olive_sapling": "Jeune olivier",
+  "item.cravings_mod.blt": "Grilled Cheese",
+  "item.cravings_mod.raw_bacon": "Raw Bacon",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friteuse",
   "item.cravings_mod.dough": "Pâte",
-  "item.cravings_mod.potato_mash": "Bouteille de purée de pommes de terre",
-  "item.cravings_mod.wine_bottle": "Bouteille de vin",
   "item.cravings_mod.cheese_slice": "Tranche de fromage",
   "item.cravings_mod.toast": "Bread Slice",
-  "block.cravings_mod.cheese_wheel": "Meule de fromage",
-  "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Couteau",
-  "item.cravings_mod.cheese": "Fromage",
   "item.cravings_mod.grape_seeds": "Pépins de raisin",
   "item.cravings_mod.bucket_of_olive_oil": "Seau d\u0027huile d\u0027olive",
   "block.cravings_mod.lemon_leaves": "Feuilles de citron",
   "block.cravings_mod.lemon_sapling": "Jeune citronnier",
-  "item.cravings_mod.lettuce": "Grapes",
-  "item.cravings_mod.grape_juice": "Jus de Raisin",
   "block.cravings_mod.lettuce_crop": "Grape Crop",
-  "block.cravings_mod.olive_leaves": "Feuilles d\u0027olivier",
-  "item.cravings_mod.lemon": "Citron",
   "item.cravings_mod.bucket_of_whey": "Seau de lactosérum",
-  "item.cravings_mod.must": "Moût de miel",
   "item.cravings_mod.yeast": "Levure",
   "item.cravings_mod.fried_curds": "Caillé frit",
-  "block.cravings_mod.grape_crop": "Récolte de raisin",
   "item.cravings_mod.tool_handle": "Poignée d\u0027outil",
+  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
+  "item.cravings_mod.ricotta": "Ricotta",
+  "item.cravings_mod.vodka": "Vodka",
+  "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
+  "item.cravings_mod.grapes": "Raisin",
+  "item_group.cravings_mod.cravings": "Envies",
+  "block.cravings_mod.olive_sapling": "Jeune olivier",
+  "item.cravings_mod.tomato": "Lettuce",
+  "item.cravings_mod.potato_mash": "Bouteille de purée de pommes de terre",
+  "item.cravings_mod.wine_bottle": "Bouteille de vin",
+  "item.cravings_mod.bacon": "Raw Bacon",
+  "block.cravings_mod.cheese_wheel": "Meule de fromage",
+  "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
+  "item.cravings_mod.cheese": "Fromage",
+  "item.cravings_mod.lettuce": "Grapes",
+  "item.cravings_mod.grape_juice": "Jus de Raisin",
+  "block.cravings_mod.olive_leaves": "Feuilles d\u0027olivier",
+  "item.cravings_mod.lemon": "Citron",
+  "item.cravings_mod.must": "Moût de miel",
+  "block.cravings_mod.grape_crop": "Récolte de raisin",
   "item.cravings_mod.mead_bottle": "Bouteille d\u0027hydromel"
 }
