--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -1,48 +1,52 @@
 {
   "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
-  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
   "item.cravings_mod.beer_bottle": "Bottiglia di birra",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
   "item.cravings_mod.cheese_curds": "Cagliata di formaggio",
   "block.cravings_mod.fryer": "Friggitore",
   "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Bottiglia di mosto di birra",
-  "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.flour": "Farina",
-  "item.cravings_mod.vodka": "Vodka",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
   "item.cravings_mod.flour_sack": "Sacco Di Farina",
-  "item.cravings_mod.bucket_of_curdy_milk": "Secchio di cagliata",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Tessuto",
-  "item.cravings_mod.grapes": "Uva",
-  "item_group.cravings_mod.cravings": "Voglie",
-  "block.cravings_mod.olive_sapling": "Alberello d\u0027olivo",
+  "item.cravings_mod.blt": "Grilled Cheese",
+  "item.cravings_mod.raw_bacon": "Raw Bacon",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friggitore",
   "item.cravings_mod.dough": "Impasto",
-  "item.cravings_mod.potato_mash": "Bottiglia Di Pasta Di Patate",
-  "item.cravings_mod.wine_bottle": "Bottiglia di vino",
   "item.cravings_mod.cheese_slice": "Fetta Di Formaggio",
   "item.cravings_mod.toast": "Bread Slice",
-  "block.cravings_mod.cheese_wheel": "Ruota di formaggio",
-  "item.cravings_mod.fermented_potato_mash": "Pasta Di Patate Fermentate",
   "item.cravings_mod.olive": "Oliva",
   "item.cravings_mod.knife": "Coltello",
-  "item.cravings_mod.cheese": "Formaggio",
   "item.cravings_mod.grape_seeds": "Semi d\u0027uva",
   "item.cravings_mod.bucket_of_olive_oil": "Secchio di olio d\u0027oliva",
   "block.cravings_mod.lemon_leaves": "Foglie di limone",
   "block.cravings_mod.lemon_sapling": "Alberello Di Limone",
-  "item.cravings_mod.lettuce": "Grapes",
-  "item.cravings_mod.grape_juice": "Succo d\u0027uva",
   "block.cravings_mod.lettuce_crop": "Grape Crop",
-  "block.cravings_mod.olive_leaves": "Foglie di olivo",
-  "item.cravings_mod.lemon": "Limone",
   "item.cravings_mod.bucket_of_whey": "Secchio di siero di latte",
-  "item.cravings_mod.must": "Mosto di miele",
   "item.cravings_mod.yeast": "Lievito",
   "item.cravings_mod.fried_curds": "Cagliata fritta",
-  "block.cravings_mod.grape_crop": "Raccolto d\u0027uva",
   "item.cravings_mod.tool_handle": "Maniglia dello strumento",
+  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
+  "item.cravings_mod.ricotta": "Ricotta",
+  "item.cravings_mod.vodka": "Vodka",
+  "item.cravings_mod.bucket_of_curdy_milk": "Secchio di cagliata",
+  "item.cravings_mod.grapes": "Uva",
+  "item_group.cravings_mod.cravings": "Voglie",
+  "block.cravings_mod.olive_sapling": "Alberello d\u0027olivo",
+  "item.cravings_mod.tomato": "Lettuce",
+  "item.cravings_mod.potato_mash": "Bottiglia Di Pasta Di Patate",
+  "item.cravings_mod.wine_bottle": "Bottiglia di vino",
+  "item.cravings_mod.bacon": "Raw Bacon",
+  "block.cravings_mod.cheese_wheel": "Ruota di formaggio",
+  "item.cravings_mod.fermented_potato_mash": "Pasta Di Patate Fermentate",
+  "item.cravings_mod.cheese": "Formaggio",
+  "item.cravings_mod.lettuce": "Grapes",
+  "item.cravings_mod.grape_juice": "Succo d\u0027uva",
+  "block.cravings_mod.olive_leaves": "Foglie di olivo",
+  "item.cravings_mod.lemon": "Limone",
+  "item.cravings_mod.must": "Mosto di miele",
+  "block.cravings_mod.grape_crop": "Raccolto d\u0027uva",
   "item.cravings_mod.mead_bottle": "Bottiglia di idromele"
 }
