25w23a, changed tomato texture, added tomato crop (was really hard), fixed localization, changed tall grass loot table, made grape code universal for all crops (except for tomato). Release 0.3.0 coming soon!!

--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,48 +1,49 @@
 {
-  "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
+  "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
   "item.cravings_mod.beer_bottle": "Bierflasche",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
   "block.cravings_mod.fryer": "Fritteuse",
-  "item.cravings_mod.bread_slice": "Bread Slice",
+  "item.cravings_mod.bread_slice": "Brotscheibe",
   "item.cravings_mod.wort_bottle": "Würzeflasche",
   "item.cravings_mod.flour": "Mehl",
-  "item.cravings_mod.cheese_sandwich": "Käsesandwich",
-  "item.cravings_mod.dipped_curds": "Eingeweichter Quark",
   "item.cravings_mod.flour_sack": "Mehlsack",
+  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
+  "item.cravings_mod.cheese_sandwich": "Käsesandwich",
   "item.cravings_mod.fabric": "Stoff",
-  "item.cravings_mod.blt": "Grilled Cheese",
-  "item.cravings_mod.raw_bacon": "Raw Bacon",
+  "item.cravings_mod.blt": "BLT",
+  "item.cravings_mod.raw_bacon": "Roher Speck",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fritteuse",
   "item.cravings_mod.dough": "Teig",
+  "item.cravings_mod.toast": "Toast",
   "item.cravings_mod.cheese_slice": "Käsescheibe",
-  "item.cravings_mod.toast": "Bread Slice",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Messer",
   "item.cravings_mod.grape_seeds": "Traubenkerne",
   "item.cravings_mod.bucket_of_olive_oil": "Eimer Olivenöl",
-  "block.cravings_mod.lemon_leaves": "Zitronenblätter",
   "block.cravings_mod.lemon_sapling": "Zitronensetzling",
-  "block.cravings_mod.lettuce_crop": "Grape Crop",
+  "block.cravings_mod.lemon_leaves": "Zitronenblätter",
+  "block.cravings_mod.lettuce_crop": "Lettuce Crop",
   "item.cravings_mod.bucket_of_whey": "Eimer mit Molke",
   "item.cravings_mod.yeast": "Hefe",
-  "item.cravings_mod.fried_curds": "Gebratener Quark",
+  "item.cravings_mod.fried_curds": "Gebratener Käsebruch",
   "item.cravings_mod.tool_handle": "Werkzeuggriff",
-  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
+  "item.cravings_mod.lettuce_seeds": "Salatsamen",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Wodka",
   "item.cravings_mod.bucket_of_curdy_milk": "Eimer mit Quark",
   "item.cravings_mod.grapes": "Trauben",
   "item_group.cravings_mod.cravings": "Heißhunger",
   "block.cravings_mod.olive_sapling": "Olivensetzling",
-  "item.cravings_mod.tomato": "Lettuce",
+  "item.cravings_mod.tomato": "Tomate",
+  "block.cravings_mod.tomato_crop": "Tomatensamen",
   "item.cravings_mod.potato_mash": "Kartoffelpaste",
   "item.cravings_mod.wine_bottle": "Traubensaft",
-  "item.cravings_mod.bacon": "Raw Bacon",
+  "item.cravings_mod.bacon": "Speck",
   "block.cravings_mod.cheese_wheel": "Käserad",
   "item.cravings_mod.fermented_potato_mash": "Fermentierte Kartoffelpaste",
   "item.cravings_mod.cheese": "Käse",
-  "item.cravings_mod.lettuce": "Grapes",
+  "item.cravings_mod.lettuce": "Kopfsalat",
   "item.cravings_mod.grape_juice": "Traubensaft",
   "block.cravings_mod.olive_leaves": "Olivenblätter",
   "item.cravings_mod.lemon": "Zitrone",
