--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,28 +1,28 @@
 {
   "item.cravings_mod.grilled_cheese": "Grilled Cheese",
-  "item.cravings_mod.beer_bottle": "Beer Bottle",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
+  "item.cravings_mod.beer_bottle": "Beer Bottle",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
   "block.cravings_mod.fryer": "Fryer",
   "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Wort Bottle",
   "item.cravings_mod.flour": "Flour",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
-  "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.flour_sack": "Flour Sack",
+  "item.cravings_mod.dipped_curds": "Dipped Curds",
+  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.fabric": "Fabric",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Raw Bacon",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fryer",
   "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.cheese_slice": "Cheese Slice",
   "item.cravings_mod.toast": "Toast",
+  "item.cravings_mod.cheese_slice": "Cheese Slice",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Knife",
   "item.cravings_mod.grape_seeds": "Grape Seeds",
   "item.cravings_mod.bucket_of_olive_oil": "Bucket of Olive Oil",
-  "block.cravings_mod.lemon_leaves": "Lemon Leaves",
   "block.cravings_mod.lemon_sapling": "Lemon Sapling",
+  "block.cravings_mod.lemon_leaves": "Lemon Leaves",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
   "item.cravings_mod.bucket_of_whey": "Bucket of Whey",
   "item.cravings_mod.yeast": "Yeast",
@@ -36,6 +36,7 @@
   "item_group.cravings_mod.cravings": "Cravings",
   "block.cravings_mod.olive_sapling": "Olive Sapling",
   "item.cravings_mod.tomato": "Tomato",
+  "block.cravings_mod.tomato_crop": "Tomato Seeds",
   "item.cravings_mod.potato_mash": "Bottle of Potato Mash",
   "item.cravings_mod.wine_bottle": "Wine Bottle",
   "item.cravings_mod.bacon": "Bacon",
