--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,34 +1,34 @@
 {
-  "item.cravings_mod.grilled_cheese": "Cheese Sandwich",
+  "item.cravings_mod.grilled_cheese": "Sandwich au fromage grillé",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
   "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
   "block.cravings_mod.fryer": "Friteuse",
-  "item.cravings_mod.bread_slice": "Bread Slice",
+  "item.cravings_mod.bread_slice": "Tranche de pain",
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
+  "item.cravings_mod.cheese_sandwich": "Sandwich au fromage",
   "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.flour_sack": "Sac de farine",
   "item.cravings_mod.fabric": "Tissu",
-  "item.cravings_mod.blt": "Grilled Cheese",
-  "item.cravings_mod.raw_bacon": "Raw Bacon",
+  "item.cravings_mod.blt": "BLT",
+  "item.cravings_mod.raw_bacon": "Bacon cru",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friteuse",
   "item.cravings_mod.dough": "Pâte",
   "item.cravings_mod.cheese_slice": "Tranche de fromage",
-  "item.cravings_mod.toast": "Bread Slice",
+  "item.cravings_mod.toast": "Pain grillé",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Couteau",
   "item.cravings_mod.grape_seeds": "Pépins de raisin",
   "item.cravings_mod.bucket_of_olive_oil": "Seau d\u0027huile d\u0027olive",
   "block.cravings_mod.lemon_leaves": "Feuilles de citron",
   "block.cravings_mod.lemon_sapling": "Jeune citronnier",
-  "block.cravings_mod.lettuce_crop": "Grape Crop",
+  "block.cravings_mod.lettuce_crop": "Lettuce Crop",
   "item.cravings_mod.bucket_of_whey": "Seau de lactosérum",
   "item.cravings_mod.yeast": "Levure",
   "item.cravings_mod.fried_curds": "Caillé frit",
   "item.cravings_mod.tool_handle": "Poignée d\u0027outil",
-  "item.cravings_mod.lettuce_seeds": "Grape Seeds",
+  "item.cravings_mod.lettuce_seeds": "Graines de laitue",
   "item.cravings_mod.ricotta": "Ricotta",
   "item.cravings_mod.vodka": "Vodka",
   "item.cravings_mod.bucket_of_curdy_milk": "Seau de lait caillé",
@@ -36,13 +36,14 @@
   "item_group.cravings_mod.cravings": "Envies",
   "block.cravings_mod.olive_sapling": "Jeune olivier",
   "item.cravings_mod.tomato": "Lettuce",
+  "block.cravings_mod.tomato_crop": "Graines de tomates",
   "item.cravings_mod.potato_mash": "Bouteille de purée de pommes de terre",
   "item.cravings_mod.wine_bottle": "Bouteille de vin",
-  "item.cravings_mod.bacon": "Raw Bacon",
+  "item.cravings_mod.bacon": "Bacon",
   "block.cravings_mod.cheese_wheel": "Meule de fromage",
   "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
   "item.cravings_mod.cheese": "Fromage",
-  "item.cravings_mod.lettuce": "Grapes",
+  "item.cravings_mod.lettuce": "Laitue",
   "item.cravings_mod.grape_juice": "Jus de Raisin",
   "block.cravings_mod.olive_leaves": "Feuilles d\u0027olivier",
   "item.cravings_mod.lemon": "Citron",
