--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,28 +1,33 @@
 {
   "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
-  "item.cravings_mod.beer_bottle": "Bierflasche",
+  "item.cravings_mod.hamburger": "Cut Buns",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
+  "item.cravings_mod.beer_bottle": "Bierflasche",
   "item.cravings_mod.cheese_curds": "Käsebruch",
+  "item.cravings_mod.cheeseburger": "Hamburger",
   "block.cravings_mod.fryer": "Fritteuse",
   "item.cravings_mod.bread_slice": "Brotscheibe",
   "item.cravings_mod.wort_bottle": "Würzeflasche",
+  "item.cravings_mod.burger_buns": "Burger Buns",
   "item.cravings_mod.flour": "Mehl",
-  "item.cravings_mod.flour_sack": "Mehlsack",
-  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
   "item.cravings_mod.cheese_sandwich": "Käsesandwich",
+  "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
+  "item.cravings_mod.flour_sack": "Mehlsack",
   "item.cravings_mod.fabric": "Stoff",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Roher Speck",
+  "item.cravings_mod.ice_cream": "Ice Cream",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fritteuse",
   "item.cravings_mod.dough": "Teig",
-  "item.cravings_mod.toast": "Toast",
   "item.cravings_mod.cheese_slice": "Käsescheibe",
+  "item.cravings_mod.toast": "Toast",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Messer",
   "item.cravings_mod.grape_seeds": "Traubenkerne",
   "item.cravings_mod.bucket_of_olive_oil": "Eimer Olivenöl",
-  "block.cravings_mod.lemon_sapling": "Zitronensetzling",
+  "item.cravings_mod.heavy_cream": "Heavy Cream",
   "block.cravings_mod.lemon_leaves": "Zitronenblätter",
+  "block.cravings_mod.lemon_sapling": "Zitronensetzling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
   "item.cravings_mod.bucket_of_whey": "Eimer mit Molke",
   "item.cravings_mod.yeast": "Hefe",
@@ -42,12 +47,14 @@
   "item.cravings_mod.bacon": "Speck",
   "block.cravings_mod.cheese_wheel": "Käserad",
   "item.cravings_mod.fermented_potato_mash": "Fermentierte Kartoffelpaste",
+  "item.cravings_mod.bacon_cheeseburger": "Cheeseburger",
   "item.cravings_mod.cheese": "Käse",
   "item.cravings_mod.lettuce": "Kopfsalat",
   "item.cravings_mod.grape_juice": "Traubensaft",
   "block.cravings_mod.olive_leaves": "Olivenblätter",
   "item.cravings_mod.lemon": "Zitrone",
   "item.cravings_mod.must": "Honigwürzeflasche",
+  "item.cravings_mod.cut_buns": "Cut Buns",
   "block.cravings_mod.grape_crop": "Weinernte",
   "item.cravings_mod.mead_bottle": "Metflasche"
 }
