--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,28 +1,33 @@
 {
   "item.cravings_mod.grilled_cheese": "Grilled Cheese",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
+  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.beer_bottle": "Beer Bottle",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
+  "item.cravings_mod.cheeseburger": "Cheeseburger",
   "block.cravings_mod.fryer": "Fryer",
   "item.cravings_mod.bread_slice": "Bread Slice",
   "item.cravings_mod.wort_bottle": "Wort Bottle",
+  "item.cravings_mod.burger_buns": "Burger Buns",
   "item.cravings_mod.flour": "Flour",
-  "item.cravings_mod.flour_sack": "Flour Sack",
-  "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
+  "item.cravings_mod.dipped_curds": "Dipped Curds",
+  "item.cravings_mod.flour_sack": "Flour Sack",
   "item.cravings_mod.fabric": "Fabric",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Raw Bacon",
+  "item.cravings_mod.ice_cream": "Ice Cream",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fryer",
   "item.cravings_mod.dough": "Dough",
-  "item.cravings_mod.toast": "Toast",
   "item.cravings_mod.cheese_slice": "Cheese Slice",
+  "item.cravings_mod.toast": "Toast",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Knife",
   "item.cravings_mod.grape_seeds": "Grape Seeds",
   "item.cravings_mod.bucket_of_olive_oil": "Bucket of Olive Oil",
-  "block.cravings_mod.lemon_sapling": "Lemon Sapling",
+  "item.cravings_mod.heavy_cream": "Heavy Cream",
   "block.cravings_mod.lemon_leaves": "Lemon Leaves",
+  "block.cravings_mod.lemon_sapling": "Lemon Sapling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
   "item.cravings_mod.bucket_of_whey": "Bucket of Whey",
   "item.cravings_mod.yeast": "Yeast",
@@ -42,12 +47,14 @@
   "item.cravings_mod.bacon": "Bacon",
   "block.cravings_mod.cheese_wheel": "Cheese Wheel",
   "item.cravings_mod.fermented_potato_mash": "Fermented Potato Mash",
+  "item.cravings_mod.bacon_cheeseburger": "Bacon Cheeseburger",
   "item.cravings_mod.cheese": "Cheese",
   "item.cravings_mod.lettuce": "Lettuce",
   "item.cravings_mod.grape_juice": "Grape Juice",
   "block.cravings_mod.olive_leaves": "Olive Leaves",
   "item.cravings_mod.lemon": "Lemon",
   "item.cravings_mod.must": "Honey Must Bottle",
+  "item.cravings_mod.cut_buns": "Cut Buns",
   "block.cravings_mod.grape_crop": "Grape Crop",
   "item.cravings_mod.mead_bottle": "Mead Bottle"
 }
