25w24b, changed wine & grape juice texture, added pitaya & its crop, fixed Italian, English, French, and German localization.

--- a/src/main/resources/assets/cravings_mod/lang/de_de.json
+++ b/src/main/resources/assets/cravings_mod/lang/de_de.json
@@ -1,31 +1,33 @@
 {
   "item.cravings_mod.grilled_cheese": "Gegrilltes Käsesandwich",
-  "item.cravings_mod.hamburger": "Cut Buns",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
+  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.beer_bottle": "Bierflasche",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Mehlsack",
   "item.cravings_mod.cheese_curds": "Käsebruch",
-  "item.cravings_mod.cheeseburger": "Hamburger",
+  "item.cravings_mod.cheeseburger": "Käseburger",
   "block.cravings_mod.fryer": "Fritteuse",
   "item.cravings_mod.bread_slice": "Brotscheibe",
   "item.cravings_mod.wort_bottle": "Würzeflasche",
-  "item.cravings_mod.burger_buns": "Burger Buns",
+  "item.cravings_mod.burger_buns": "Burgerbrötchen",
   "item.cravings_mod.flour": "Mehl",
   "item.cravings_mod.cheese_sandwich": "Käsesandwich",
   "item.cravings_mod.dipped_curds": "Getauchter Käsebruch",
   "item.cravings_mod.flour_sack": "Mehlsack",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.fabric": "Stoff",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Roher Speck",
-  "item.cravings_mod.ice_cream": "Ice Cream",
+  "block.cravings_mod.pitaya_crop": "Pitaya-Samen",
+  "item.cravings_mod.ice_cream": "Eiscreme",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fritteuse",
   "item.cravings_mod.dough": "Teig",
   "item.cravings_mod.cheese_slice": "Käsescheibe",
-  "item.cravings_mod.toast": "Toast",
+  "item.cravings_mod.toast": "Geröstetes Brot",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Messer",
   "item.cravings_mod.grape_seeds": "Traubenkerne",
   "item.cravings_mod.bucket_of_olive_oil": "Eimer Olivenöl",
-  "item.cravings_mod.heavy_cream": "Heavy Cream",
+  "item.cravings_mod.heavy_cream": "Creme",
   "block.cravings_mod.lemon_leaves": "Zitronenblätter",
   "block.cravings_mod.lemon_sapling": "Zitronensetzling",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
@@ -47,14 +49,14 @@
   "item.cravings_mod.bacon": "Speck",
   "block.cravings_mod.cheese_wheel": "Käserad",
   "item.cravings_mod.fermented_potato_mash": "Fermentierte Kartoffelpaste",
-  "item.cravings_mod.bacon_cheeseburger": "Cheeseburger",
+  "item.cravings_mod.bacon_cheeseburger": "Speck-Käse Burger",
   "item.cravings_mod.cheese": "Käse",
   "item.cravings_mod.lettuce": "Kopfsalat",
   "item.cravings_mod.grape_juice": "Traubensaft",
   "block.cravings_mod.olive_leaves": "Olivenblätter",
   "item.cravings_mod.lemon": "Zitrone",
   "item.cravings_mod.must": "Honigwürzeflasche",
-  "item.cravings_mod.cut_buns": "Cut Buns",
+  "item.cravings_mod.cut_buns": "Getrennte Burgerbrötchen",
   "block.cravings_mod.grape_crop": "Weinernte",
   "item.cravings_mod.mead_bottle": "Metflasche"
 }
