--- a/src/main/resources/assets/cravings_mod/lang/en_us.json
+++ b/src/main/resources/assets/cravings_mod/lang/en_us.json
@@ -1,8 +1,8 @@
 {
   "item.cravings_mod.grilled_cheese": "Grilled Cheese",
   "item.cravings_mod.hamburger": "Hamburger",
-  "item.cravings_mod.beer_bottle": "Beer Bottle",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Flour Sack",
+  "item.cravings_mod.beer_bottle": "Beer Bottle",
   "item.cravings_mod.cheese_curds": "Cheese Curds",
   "item.cravings_mod.cheeseburger": "Cheeseburger",
   "block.cravings_mod.fryer": "Fryer",
@@ -13,9 +13,11 @@
   "item.cravings_mod.cheese_sandwich": "Cheese Sandwich",
   "item.cravings_mod.dipped_curds": "Dipped Curds",
   "item.cravings_mod.flour_sack": "Flour Sack",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.fabric": "Fabric",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Raw Bacon",
+  "block.cravings_mod.pitaya_crop": "Pitaya Seeds",
   "item.cravings_mod.ice_cream": "Ice Cream",
   "gui.cravings_mod.fryer_gui.label_fryer": "Fryer",
   "item.cravings_mod.dough": "Dough",
