--- a/src/main/resources/assets/cravings_mod/lang/fr_fr.json
+++ b/src/main/resources/assets/cravings_mod/lang/fr_fr.json
@@ -1,31 +1,33 @@
 {
+  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.grilled_cheese": "Sandwich au fromage grillé",
-  "item.cravings_mod.hamburger": "Cut Buns",
-  "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "gui.cravings_mod.sack_gui.label_flour_sack": "Sac de farine",
+  "item.cravings_mod.beer_bottle": "Bouteille de bière",
   "item.cravings_mod.cheese_curds": "Fromage en grains",
-  "item.cravings_mod.cheeseburger": "Hamburger",
+  "item.cravings_mod.cheeseburger": "Burger au fromage",
   "block.cravings_mod.fryer": "Friteuse",
   "item.cravings_mod.bread_slice": "Tranche de pain",
   "item.cravings_mod.wort_bottle": "Bouteille de moût de bière",
-  "item.cravings_mod.burger_buns": "Burger Buns",
+  "item.cravings_mod.burger_buns": "Pains à hamburger",
   "item.cravings_mod.flour": "Farine",
-  "item.cravings_mod.flour_sack": "Sac de farine",
-  "item.cravings_mod.dipped_curds": "Caillé trempé",
   "item.cravings_mod.cheese_sandwich": "Sandwich au fromage",
+  "item.cravings_mod.dipped_curds": "Caillé trempé",
+  "item.cravings_mod.flour_sack": "Sac de farine",
   "item.cravings_mod.fabric": "Tissu",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Bacon cru",
-  "item.cravings_mod.ice_cream": "Ice Cream",
+  "block.cravings_mod.pitaya_crop": "Graines de pitaya",
+  "item.cravings_mod.ice_cream": "Crème glacée",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friteuse",
   "item.cravings_mod.dough": "Pâte",
-  "item.cravings_mod.toast": "Pain grillé",
   "item.cravings_mod.cheese_slice": "Tranche de fromage",
+  "item.cravings_mod.toast": "Pain grillé",
   "item.cravings_mod.olive": "Olive",
   "item.cravings_mod.knife": "Couteau",
   "item.cravings_mod.grape_seeds": "Pépins de raisin",
   "item.cravings_mod.bucket_of_olive_oil": "Seau d\u0027huile d\u0027olive",
-  "item.cravings_mod.heavy_cream": "Heavy Cream",
+  "item.cravings_mod.heavy_cream": "Crème",
   "block.cravings_mod.lemon_sapling": "Jeune citronnier",
   "block.cravings_mod.lemon_leaves": "Feuilles de citron",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
@@ -47,14 +49,14 @@
   "item.cravings_mod.bacon": "Bacon",
   "block.cravings_mod.cheese_wheel": "Meule de fromage",
   "item.cravings_mod.fermented_potato_mash": "Purée de pommes de terre fermentée",
-  "item.cravings_mod.bacon_cheeseburger": "Cheeseburger",
+  "item.cravings_mod.bacon_cheeseburger": "Burger au bacon et au fromage",
   "item.cravings_mod.cheese": "Fromage",
   "item.cravings_mod.lettuce": "Laitue",
   "item.cravings_mod.grape_juice": "Jus de Raisin",
   "block.cravings_mod.olive_leaves": "Feuilles d\u0027olivier",
   "item.cravings_mod.lemon": "Citron",
   "item.cravings_mod.must": "Moût de miel",
-  "item.cravings_mod.cut_buns": "Cut Buns",
+  "item.cravings_mod.cut_buns": "Pains à hamburger séparés",
   "block.cravings_mod.grape_crop": "Récolte de raisin",
   "item.cravings_mod.mead_bottle": "Bouteille d\u0027hydromel"
 }
