--- a/src/main/resources/assets/cravings_mod/lang/it_it.json
+++ b/src/main/resources/assets/cravings_mod/lang/it_it.json
@@ -1,22 +1,24 @@
 {
   "item.cravings_mod.grilled_cheese": "Panino al formaggio grigliato",
-  "item.cravings_mod.hamburger": "Cut Buns",
-  "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
+  "item.cravings_mod.hamburger": "Hamburger",
   "item.cravings_mod.beer_bottle": "Bottiglia di birra",
+  "gui.cravings_mod.sack_gui.label_flour_sack": "Sacco Di Farina",
   "item.cravings_mod.cheese_curds": "Cagliata di formaggio",
   "item.cravings_mod.cheeseburger": "Hamburger",
   "block.cravings_mod.fryer": "Friggitore",
   "item.cravings_mod.bread_slice": "Fetta di pane",
   "item.cravings_mod.wort_bottle": "Bottiglia di mosto di birra",
-  "item.cravings_mod.burger_buns": "Burger Buns",
+  "item.cravings_mod.burger_buns": "Panini per hamburger",
   "item.cravings_mod.flour": "Farina",
   "item.cravings_mod.flour_sack": "Sacco Di Farina",
   "item.cravings_mod.dipped_curds": "Cagliata imbevuta",
   "item.cravings_mod.cheese_sandwich": "Panino al formaggio",
+  "item.cravings_mod.pitaya": "Pitaya",
   "item.cravings_mod.fabric": "Tessuto",
   "item.cravings_mod.blt": "BLT",
   "item.cravings_mod.raw_bacon": "Bacon cruda",
-  "item.cravings_mod.ice_cream": "Ice Cream",
+  "block.cravings_mod.pitaya_crop": "Semi di Pitaya",
+  "item.cravings_mod.ice_cream": "Gelato",
   "gui.cravings_mod.fryer_gui.label_fryer": "Friggitore",
   "item.cravings_mod.dough": "Impasto",
   "item.cravings_mod.toast": "Pane abbrustolito",
@@ -25,7 +27,7 @@
   "item.cravings_mod.knife": "Coltello",
   "item.cravings_mod.grape_seeds": "Semi d\u0027uva",
   "item.cravings_mod.bucket_of_olive_oil": "Secchio di olio d\u0027oliva",
-  "item.cravings_mod.heavy_cream": "Heavy Cream",
+  "item.cravings_mod.heavy_cream": "Crema",
   "block.cravings_mod.lemon_sapling": "Alberello Di Limone",
   "block.cravings_mod.lemon_leaves": "Foglie di limone",
   "block.cravings_mod.lettuce_crop": "Lettuce Crop",
@@ -47,14 +49,14 @@
   "item.cravings_mod.bacon": "Bacon",
   "block.cravings_mod.cheese_wheel": "Ruota di formaggio",
   "item.cravings_mod.fermented_potato_mash": "Pasta Di Patate Fermentate",
-  "item.cravings_mod.bacon_cheeseburger": "Cheeseburger",
+  "item.cravings_mod.bacon_cheeseburger": "Hamburger con formaggio e bacon",
   "item.cravings_mod.cheese": "Formaggio",
   "item.cravings_mod.lettuce": "Lattuga",
   "item.cravings_mod.grape_juice": "Succo d\u0027uva",
   "block.cravings_mod.olive_leaves": "Foglie di olivo",
   "item.cravings_mod.lemon": "Limone",
   "item.cravings_mod.must": "Mosto di miele",
-  "item.cravings_mod.cut_buns": "Cut Buns",
+  "item.cravings_mod.cut_buns": "Panini per hamburger separati",
   "block.cravings_mod.grape_crop": "Raccolto d\u0027uva",
   "item.cravings_mod.mead_bottle": "Bottiglia di idromele"
 }
